--- a/package.json
+++ b/package.json
@@ -2,18 +2,33 @@
   "name": "gulp-maxia",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "scss/index.js",
+  "files": [
+    "dist/**/*.{css,js,map}",
+    "scss/**/*.{css,js,map}"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --mode=development --open",
+    "build": "standard \"scss/**/*.js\" -v -q && webpack --mode=production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^4.0.2",
-    "gulp-sass": "^5.0.0",
-    "node-sass": "^7.0.0",
-    "sass": "^1.45.0"
-  },
-  "dependencies": {}
+    "css-loader": "^3.5.3",
+    "cssnano": "^4.1.10",
+    "docdash": "^1.2.0",
+    "file-loader": "^4.3.0",
+    "mini-css-extract-plugin": "^0.8.2",
+    "node-sass": "^4.14.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "remove-files-webpack-plugin": "^1.4.2",
+    "sass-loader": "^7.3.1",
+    "standard": "^12.0.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
+  }
 }
